cleared the security alert in the git

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ VITE_INSTA="https://www.instagram.com/makayiramretreat"
 VITE_YOUTUBE="https://www.youtube.com/@makayiramretreat"
 VITE_MAP="https://maps.app.goo.gl/RvF3d9NLJg5svbLC8"
 VITE_MOBILE=+919995807080
+VITE_GOOGLE_API="AIzaSyCejIGA5EwWnrPN2ppD9QnTtp9g4tCzJZQ"
